7/11/13 change double quotes (") to single quotes (') throughout
6/19/13 upgrade lodash, jQuery and require
6/7/13 upgrade from lodash-1.0.0-rc3 to lodash-1.2.1, fixes Chrome "source URL declaration is deprecated" warning
6/7/13 replace imagesloaded jquery plugin with PxLoader, integrate SimLauncher
# 0.0.0-1 6/3/13
6/3/13 cleanup example-sim, bring it up to current PhET practices
4/23/13 delete TODO.txt because no one seems to be using it and everything in it is currently irrelevant
4/23/13 delete "Show Performance Monitor" control, joist doesn't support it
4/23/13 specify background color for tab that is passed to Sim
4/23/13 rename ExampleSimScene to ExampleSimView, since it is not a scene
4/23/13 remove some clearly-obsolete cruft from example-sim.css
4/2/13 Switched from phetcommon/inheritance to phet_core/inherit
3/6/13 delete phetcommon type (Dimension2D, Vector2D, Point2D), use dot type (Dimension2 and Vector2)
3/6/13 delete submodules and common/
3/6/13 expect dependent repositories (phetcommon, easel-phet) to be checked out as siblings in the directory hierarchy
2/26/13 use i18n release instead of submodule fork
2/26/13 upgrade contrib to latest versions
2/26/13 migrate images loader to phetcommon
2/26/13 add images and overlay to debug and release html files
2/26/13 integrate jquery.imagesloaded into requirejs config
2/26/13 delete config/image-0.2.1.js, not using
2/26/13 encapsulate imagesloaded in ImagesLoader
2/26/13 add overlay hack to top-level html, to prevent seeing images briefly
2/26/13 initialize view after all images have been loaded
2/26/13 use <img> + imagesloaded + jquery to load images
2/26/13 dump requirejs image plugin, because it doesn't work after applying grunt
2/26/13 update to easeljs-0.6.0
2/26/13 migrate PerformanceMonitor and its dependency (stats.js) to phetcommon from example-sim
2/25/13 clean up .gitignore, don't need to specify stuff inside deploy/