@@ -1,1 +1,5 @@
 barMagnet.png author=PhET notes=created using Adobe Fireworks
+reset_button_disabled.png source=PhET author=Sharon
+reset_button_down.png source=PhET author=Sharon
+reset_button_over.png source=PhET author=Sharon
+reset_button_up.png source=PhET author=Sharon
